--- a/app/index.html
+++ b/app/index.html
@@ -26,10 +26,16 @@ limitations under the License.
   <div class="container">
     <div class="app">
       <div class="header">
-        <b>Chatty McChatface</b> - or How to Build Talking Websites with the <strong>Web Speech API</strong> and <strong>TensorFlow.js</strong>
+        <b>Chatty McChatface</b> - or How to Build Voice-Enabled Websites with the <strong>Nexmo Conversation API</strong> and <strong>Nexmo Client SDK</strong>
       </div>
 
       <div id='message-area' class="messages">
+        <div class="message bot">
+          👋! Hello, I can:
+          <b>get the weather (⛅)</b>
+          <!-- <br /> -->
+          or <b>play Music (🎵🎺🎵)</b>
+        </div>
       </div>
       <div class="controls">
         <form id="textentry">
