--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@ limitations under the License.
           👋! Hello, I can:
           <b>get the weather (⛅)</b>
           <!-- <br /> -->
-          or <b>play Music (🎵🎺🎵)</b>
+          or <b>play Music (𝄞🥁𝄞)</b>
         </div>
       </div>
       <div class="controls">
