--- a/app/index.html
+++ b/app/index.html
@@ -1,21 +1,12 @@
-<!-- Copyright 2019 Google LLC. All Rights Reserved.
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-http://www.apache.org/licenses/LICENSE-2.0
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
-============================================================================== -->
-
-
 <html>
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Chatty McChatface</title>
+  <meta name="description" content="Interface for workshop on building a voice-enabled website using the Nexmo Client SDK">
+  <meta name="author" content="Alex Lakatos">
 
   <link rel="stylesheet" href="./index.scss">
   <style>
@@ -31,12 +22,14 @@ limitations under the License.
 
       <div id='message-area' class="messages">
         <div class="message bot">
-          👋! Hello, I can:
+          <span>👋! Hello, I can:
           <b>get the weather (⛅)</b>
           <!-- <br /> -->
           or <b>play Music (𝄞🥁𝄞)</b>
+          </span>
         </div>
       </div>
+
       <div class="controls">
         <form id="textentry">
           <input id="textbox" type="text" />
@@ -44,8 +37,8 @@ limitations under the License.
           <button id="speech" type="button">🙊</button>
         </form>
       </div>
-    </div>
 
+    </div>
   </div>
   <script src="./index.js"></script>
 </body>
